UPD: fix misaligned window header

--- a/src/global.css
+++ b/src/global.css
@@ -68,7 +68,7 @@
   }
 
   .action-btn {
-    @apply rounded-full text-transparent group-hover:text-gray group-hover:cursor-pointer w-4 h-4 text-center select-none;
+    @apply rounded-full text-transparent group-hover:text-gray group-hover:cursor-pointer w-3 h-3 text-center select-none duration-200 transition-all text-tiny leading-3 font-bold;
   }
 }
 
